# pmanager

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  APPLE_UI_REDESIGN.md  BACKEND_TAG_MANAGEMENT_COMPLETE.md  BATCH_OPERATIONS.md  BATCH_OPERATIONS_UI_COMPLETE.md  BATCH_UI_REDESIGN.md  COMPLETE_BATCH_OPERATIONS_GUIDE.md  CONTRIBUTING.md  CSS_FIXES_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  Dockerfile.backend  Dockerfile.backend.dev  Dockerfile.frontend  MANUAL_PRECOMMIT_WORKFLOW.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PRECOMMIT_MANUAL_MODE_COMPLETE.md  PRE_COMMIT_CI_COMPLETE.md  PRE_COMMIT_SETUP.md  QUICK_REFERENCE_TICKET_CREATION.md  QUICK_START.md  QUICK_START_PRECOMMIT.md  README.md  README_PRECOMMIT.md  SETUP_SUMMARY.txt  STATUS_FILTER_IMPROVEMENTS.md  TABLE_UI_COMPLETE.md  TAG_FEATURE_SUMMARY.md  TAG_FILTER_COMPLETE.md  TAG_MANAGEMENT_COMPLETE.md  (+16 more)
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  pr-checks.yml  pre-commit-autoupdate.yml
client/: README_PHASE3.md  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  index.css
client/src/components/common/: ConfirmDialog.tsx  ErrorBoundary.tsx  FloatingActionButton.tsx  LoadingSpinner.tsx  TagSkeleton.tsx  TicketSkeleton.tsx  index.ts
client/src/components/layout/: Container.tsx  Header.tsx  Layout.tsx  index.ts
client/src/components/tag/: TagBadge.tsx  (+2 more)
client/src/hooks/: index.ts  useDebounce.ts  useTags.ts  useTickets.ts
client/src/pages/: TagsPage.tsx  TicketsPage.tsx  index.ts
client/src/services/: api.ts  index.ts  tagService.ts  ticketService.ts
client/src/types/: index.ts  tag.ts  ticket.ts
docs/: PRE_COMMIT_SETUP.md
server/: Procfile  README_SEED.md  SEED_DATA.md  alembic.ini  requirements.txt  seed-commands.sh  seed.sh  seed.sql
server/alembic/: env.py
server/alembic/versions/: 84a2f28d4542_create_initial_tables.py  d1a0243a2798_add_updated_at_trigger.py
server/app/: config.py  database.py  main.py
server/app/models/: tag.py  ticket.py
server/app/routers/: __init__.py  tags.py  tickets.py
server/app/schemas/: __init__.py  tag.py  ticket.py
server/app/services/: __init__.py  tag_service.py  ticket_service.py
server/docs/: QUICK_REFERENCE.md  README.md  test.rest
server/tests/: conftest.py  test_tags.py  test_tickets.py
specs/: 0001-spec.md  0002-implementation-plan.md
(+35 files in other folders)
